syntax = "proto3";

option csharp_namespace = "PersonalSiteAPI.gRPC";

package gRPC;

service MoveBankService {
	rpc GetEvents (EventRequest) returns (stream LineStringFeatureCollection);
}

message EventRequest {
	int64 studyId = 1;
	repeated string localIdentifiers = 2;
	optional string sensorType = 3;
	optional string geometryType = 4;
	EventOptions options = 5;
}

message EventOptions {
	optional int32 maxEventsPerIndividual = 1;
	optional int64 timestampStart = 2;
	optional int64 timestampEnd = 3;
	optional string attributes = 4;
	optional string eventProfile = 5;
}

// GeoJsonTypes
message LineStringMetadata {
	int32 count = 1;
	double totalDistanceTravelled = 2;
	string localIdentifier = 3; 
	string sensorUsed = 4;
	optional string taxa = 5;
}

message LineStringProperties {
	string from = 1; // This is a datetime serialized into a string
	string to = 2; 

	repeated double fromColor = 3; // rgb colors
	repeated double toColor = 4;

	string content = 5; 
	double distance = 6;
	double distanceTravelled = 7;
	int64 timestamp = 8;
}

message Position {
	repeated float position = 1;
}

message LineStringGeometry {
	string type = 1; // default = LineString
	repeated Position coordinates = 2;
}

message LineStringFeature {
	string type = 1; // default = feature
	LineStringGeometry geometry = 2;
	LineStringProperties properties = 3;
}

message LineStringFeatureCollection {
	string type = 1;
	LineStringMetadata metadata = 2;
	repeated LineStringFeature features = 3;  
	optional int64 id = 4;
}

